@@ -45,6 +45,7 @@
 (require 'cl)
 (require 'xml)
 (require 'parse-time)
+(autoload 'url-insert "url-handlers")
 
 (defconst twittering-mode-version "0.9")
 (defconst twittering-max-number-of-tweets-on-retrieval 200
@@ -1440,12 +1441,12 @@ If STATUS-DATUM is already in DATA-VAR, return nil. If not, return t."
     (if longurl
 	(save-excursion
 	  (let ((buffer (url-retrieve-synchronously (concat api longurl))))
-	    (set-buffer buffer)
-	    (url-insert buffer)
-	    (prog1
-		(buffer-substring (point-min) (point))
-	      (kill-buffer buffer)
-	      )))
+	    (with-temp-buffer
+	      (url-insert buffer)
+	      (prog1
+		  (buffer-substring (point-min) (point))
+		(kill-buffer buffer)
+		))))
       nil)))
 
 (defun twittering-tinyurl-replace-at-point ()
